# ChemML2026

./: .gitignore  PrakEgor.ipynb  README.md
.github/workflows/: check-docker-uv.yml
dir_0/: Schneider_Mark  Vakhrushev_Andrey
dir_1/Burov_Ivan/: generate_data.py  pyproject.toml  train.py
dir_1/Dudakov_Ivan/: train.py
dir_1/Shiyanenko_Konstantin/: generate_data.py  pyproject.toml  train.py
dir_1/Student_Student/: generate_data.py
dir_2/Schneider_Mark/: extended_benchmark.ipynb
materials/RON_MON/: .gitignore  main.py  pipeline.py  pyproject.toml  seminar.ipynb
materials/docker-uv/: README.md
materials/git/: README.md
materials/linux/: README.md
materials/python-env/: README.md
scripts/: check_docker_uv.py
